--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -1,6 +1,7 @@
 @import main.sass
 @import containers.sass
 @import forms.sass
+@import buttons.sass
 @import maps.sass
 @import streams.sass
 @import users.sass
