--- a/public/stylesheets/sass/_main.sass
+++ b/public/stylesheets/sass/_main.sass
@@ -5,7 +5,8 @@ body
 	background-color = !tan
 	font-size: 1em
 	text-align: center
-
+	behavior: url("/stylesheets/csshover3.htc")
+	
 strong, em, b, i
 	font-family = !fonts_styled
 
@@ -20,12 +21,12 @@ a
 		border: none
 		
 .clear
-	clear: both
+	display: block
 	width: 0
 	height: 0
 	margin: 0
-	padding: 0
-
+	clear: both
+	
 h1
 	width: 100%
 	margin: 0
