--- a/public/stylesheets/sass/_forms.sass
+++ b/public/stylesheets/sass/_forms.sass
@@ -15,7 +15,8 @@ label
 		height: 1.2em
 		width: 8em
 		margin: 0em
-		margin-top: 0.25em
+		margin-top: 0.5em
+		_margin-top: 0.25em
 		padding: 0.5em
 		text-align: right
 		color = !gray
