--- a/app/views/sounds/_form.html.haml
+++ b/app/views/sounds/_form.html.haml
@@ -2,7 +2,7 @@
 	= javascript_include_tag 'lib/jquery', 'form-buttons', 'stylize-file'
 
 - form_for [@soundwalk, @sound], :html => {:multipart => true} do |form|
-	%div#file-uploader
+	%div
 		= form.label :uploaded_data, label_with_errors(@soundwalk, 'uploaded_data', 'Sound file'), :class => 'field'
 		%div.fileinput= form.file_field :uploaded_data, :class => 'file'
 	
@@ -22,5 +22,6 @@
 		= form.label :recorded_at, label_with_errors(@sound, 'recorded_at', 'Recorded at'), :class => 'field'
 		= form.text_field :recorded_at, :class => 'field'
 		
-	%div.submit
-		= form.submit 'Save', :class => 'button'
+	%p.submit
+		%button{:type => 'submit'} Save
+		
