--- a/app/views/sounds/new.html.haml
+++ b/app/views/sounds/new.html.haml
@@ -1,12 +1,12 @@
 - content_for :title do
 	Add Sounds to #{@soundwalk.title}
 
-%h1 Add Sound to {@soundwalk.title}
+%h1 Add Sound to #{@soundwalk.title}
 
 %div#new-sound
 	%div#help{:class => 'help'}
 		%p Here is some text that will display help for uploading sounds to the server.
 		%p This will contain help for uploading sounds of different types as well as a link to the iPhone App Store to download the iPhone application.
-		
-= render :partial => 'form'
-
+	
+	= render :partial => 'form'
+	
