--- a/public/stylesheets/sass/_soundwalks.sass
+++ b/public/stylesheets/sass/_soundwalks.sass
@@ -58,7 +58,9 @@
 			background-color = !tan
 		&.sound-record-error
 			background-color = !very_light_red
+			
 		th
+			text-align: left
 			color = !dark_blue
 			border-bottom = !dashed_border
 			padding: 0.5em
