--- a/public/stylesheets/sass/_uploadify.sass
+++ b/public/stylesheets/sass/_uploadify.sass
@@ -96,7 +96,10 @@ form
 			background-color = !very_light_gray
 			border-right = "2px solid " + !light_green
 			height: 100%
-			
+	
+	.delete_button
+		color = !red
+	
 .fileUploadQueueItem-Active
 	+queue_item
 	
