--- a/app/views/sounds/_sounds_map.html.haml
+++ b/app/views/sounds/_sounds_map.html.haml
@@ -1,4 +1,4 @@
 - content_for :javascript do
-	= javascript_include_tag "http://maps.google.com/maps?file=api&amp;v=2&amp;key=#{Geokit::Geocoders::google}", 'sounds-map'
+	=# javascript_include_tag "http://maps.google.com/maps?file=api&amp;v=2&amp;key=#{Geokit::Geocoders::google}", 'sounds-map'
 
 %div#sounds-map
