--- a/app/views/links/index.html.haml
+++ b/app/views/links/index.html.haml
@@ -9,10 +9,10 @@
 %h2 Tasks
 
 %p
-	%span#acoustic= 'Acoustic weights are being computed.<br />' if Settings.links_weights_acoustic
-	%span#semantic= 'Semantic weights are being computed.<br />' if Settings.links_weights_semantic
-	%span#social= 'Social weights are being computed.<br />' if Settings.links_weights_social
-	%span#distances= 'Shortest-path distances are being computed.<br />' if Settings.links_distances
+	%span#acoustic= "Acoustic weights: #{Settings.links_weights_acoustic}<br />" if Settings.links_weights_acoustic
+	%span#semantic= "Semantic weights: #{Settings.links_weights_semantic}<br />" if Settings.links_weights_semantic
+	%span#social= "Social weights are being computed: #{Settings.links_weights_social}<br />" if Settings.links_weights_social
+	%span#distances= "Shortest-path distances: #{Settings.links_distances}<br />" if Settings.links_distances
 		
 %p.buttons
 	%a{:href => '/links/update_acoustic'} Update acoustic weights
