--- a/app/views/links/index.html.haml
+++ b/app/views/links/index.html.haml
@@ -63,9 +63,9 @@
 	%p.buttons	
 		- if @total_links > @links.size
 			- if @offset > 0
-				%a{:href => "/links/?offset=#{@offset - 20}"} Previous
+				%a{:href => "/links/?offset=#{@offset - 20}"} &lt; Previous
 			- if @offset + @links.size < @total_links
-				%a{:href => "/links/?offset=#{@offset + 20}"} Next
+				%a{:href => "/links/?offset=#{@offset + 20}"} &gt; Next
 - else
 	No links currently exist in the database.
 	
