--- a/app/views/links/index.html.haml
+++ b/app/views/links/index.html.haml
@@ -65,7 +65,7 @@
 			- if @offset > 0
 				%a{:href => "/links/?offset=#{@offset - 20}"} &lt; Previous
 			- if @offset + @links.size < @total_links
-				%a{:href => "/links/?offset=#{@offset + 20}"} &gt; Next
+				%a{:href => "/links/?offset=#{@offset + 20}"} Next &gt;
 - else
 	No links currently exist in the database.
 	
