--- a/app/views/links/index.html.haml
+++ b/app/views/links/index.html.haml
@@ -39,7 +39,7 @@
 		
 	%div#distances{:class => 'admin_progress'}
 		%div.progress{:style => "width: #{percentage_width(distances)}"}
-		= "<span class='text'>Distances (<span class='progress_text'>#{percentage_text(distances)}<span>)</span>"
+		= "<span class='text'>Distances (<span class='progress_text'>#{percentage_text(distances)}</span>)</span>"
 		
 %h2 Links
 	
