--- a/public/stylesheets/sass/_admin.sass
+++ b/public/stylesheets/sass/_admin.sass
@@ -18,6 +18,6 @@
 		top: 0
 		height: 100%
 		width: 1px
-		background-color = !light_green
+		background-color = !very_light_blue
 		z-index: 0
-		border-bottom = !green
+		border-right = "2px solid " + !light_green
