--- a/app/views/links/index.haml
+++ b/app/views/links/index.haml
@@ -2,7 +2,7 @@
 	Network Administration
 
 - content_for :javascript do
-	= javascript_include_tag 'lib/jquery.js', 'links.js'
+	= javascript_include_tag 'lib/jquery.js', 'progress.js', 'links.js'
 	
 %h1 Network Administration
 
@@ -49,12 +49,8 @@
 
 - if @links != nil && @links.size > 0
 	%p.buttons	
-		- if @total_links > @links.size
-			- if @offset > 0
-				%a{:href => "/links/?offset=#{@offset - 20}"} &lt; Previous
-			- if @offset + @links.size < @total_links
-				%a{:href => "/links/?offset=#{@offset + 20}"} Next &gt;
-				
+		= render :partial => 'shared/offset_pagination', :locals => {:total_items => @total_links, :items => @links, :offset => @offset, :page_offset => '/links/?offset='}
+		
 	%table{:style => 'width: 100%; text-align: left'}
 		%tr
 			%th ID
@@ -72,11 +68,8 @@
 					%td #{link.distance}
 					
 	%p.buttons	
-		- if @total_links > @links.size
-			- if @offset > 0
-				%a{:href => "/links/?offset=#{@offset - 20}"} &lt; Previous
-			- if @offset + @links.size < @total_links
-				%a{:href => "/links/?offset=#{@offset + 20}"} Next &gt;
+		= render :partial => 'shared/offset_pagination', :locals => {:total_items => @total_links, :items => @links, :offset => @offset, :page_offset => '/links/?offset='}
+		
 - else
 	No links currently exist in the database.
 	
