shorter legal footer

--- a/app/views/layouts/user.haml
+++ b/app/views/layouts/user.haml
@@ -24,6 +24,8 @@
 		%div#body{:class => 'little'}
 			%div#content
 				= yield
+				
 			%div.clear
+			
 			%div#footer
-				Soundwalks is developed with support from the  #{link_to 'Arizona State University Arts, Media, and Engineering', 'http://ame.asu.edu'} program, the #{link_to 'National Science Foundation', 'http://nsf.gov'}, and several #{link_to 'open source software', '/about/oss'} packages.
+				Copyright 2009 <a href = "/about">Soundwalks</a>.
