--- a/app/views/admin/mds.haml
+++ b/app/views/admin/mds.haml
@@ -13,7 +13,9 @@
 %div
 	%div{:style => 'float: right'}
 		%p.buttons
-			%a{:href => '/admin/mds_load'} Load positions
+			%a{:href => '/admin/mds_load_random'} Load random positions
+		%p.buttons
+			%a{:href => '/admin/mds_load_file'} Load positions from file
 		%p.buttons
 			%a{:href => '/admin/mds_delete_all'} Delete all
 	%div{:style => 'width: 40em'}
