--- a/app/views/admin/mds.haml
+++ b/app/views/admin/mds.haml
@@ -29,8 +29,8 @@
 
 - x = MdsNode.find(:all).collect{|node| node.x}
 - y = MdsNode.find(:all).collect{|node| node.y}
-- z = MdsNode.find(:all).collect{|node| node.z}
-%p{:style => 'text-align: center'}= image_tag Gchart.scatter(:data => [x, y])
+
+%p{:style => 'text-align: center'}= image_tag Gchart.scatter(:data => [x, y], :axis_with_labels => 'x,y',:axis_labels => ['-0.5|0.5', '-0.5|0.5'])
 
 - if @nodes != nil && @nodes.size > 0
 	%p.buttons
