major changes. links now are between mds_nodes.

--- a/app/views/admin/links.haml
+++ b/app/views/admin/links.haml
@@ -62,8 +62,8 @@
 			- @links.each do |link|
 				%tr
 					%td #{link.id}
-					%td #{link.first_type}.#{link.first_id}
-					%td #{link.second_type}.#{link.second_id}
+					%td #{link.first_id}
+					%td #{link.second_id}
 					%td #{link.cost}
 					%td #{link.distance}
 					
