--- a/public/stylesheets/sass/_maps.sass
+++ b/public/stylesheets/sass/_maps.sass
@@ -7,7 +7,8 @@
 	height = !square_map_height
 	margin: 0.5em
 	overflow: hidden
-
+	background-color: white
+	
 #sounds-map
 	+float_right
 	border = !thick_border
@@ -15,7 +16,17 @@
 	height = !square_map_height
 	margin: 0.5em
 	overflow: hidden
-
+	background-color: white
+	
+#sound-map
+	+float_right
+	width = !square_map_width
+	height = !square_map_height
+	border = !thick_border
+	margin: 0.5
+	overflow: hidden
+	background-color: white
+	
 .marker-info
 	margin: 0
 	padding: 0
