--- a/public/stylesheets/sass/_variables.sass
+++ b/public/stylesheets/sass/_variables.sass
@@ -4,6 +4,7 @@
 !very_light_red = !light_red / 2 + #FF8888
 
 !green = #9dbf30
+!dark_green = !green / 1.5
 !light_green = !green + #226622
 !very_light_green = !green / 2 + #99ffbc
 
