--- a/app/views/sounds/_sounds_map.haml
+++ b/app/views/sounds/_sounds_map.haml
@@ -1,4 +1,5 @@
 - content_for :javascript do
-	= javascript_include_tag "http://maps.google.com/maps?file=api&v=2&key=#{Geokit::Geocoders::google}", 'sounds-map'
+	%script{:src => "http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=true_or_false&amp;key=#{Geokit::Geocoders::google}"}
+	= 'sounds-map'
 
 %div#sounds-map
