--- a/app/views/soundwalks/_soundwalks_map.haml
+++ b/app/views/soundwalks/_soundwalks_map.haml
@@ -1,5 +1,6 @@
 - content_for :javascript do
-	= javascript_include_tag "http://maps.google.com/maps?file=api&v=2&key=#{Geokit::Geocoders::google}", 'soundwalks-map'
+	%script{:src => "http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=true_or_false&amp;key=#{Geokit::Geocoders::google}"}
+	= javascript_include_tag 'soundwalks-map'
 	
 %div#soundwalks-map
 
