--- a/app/views/sounds/show.haml
+++ b/app/views/sounds/show.haml
@@ -2,7 +2,7 @@
 	#{@sound.soundwalk.title}: Sound #{@sound.id}
 
 - content_for :javascript do
-	%script{:src => "http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=true_or_false&amp;key=#{Geokit::Geocoders::google}"}
+	%script{:src => "http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=#{Geokit::Geocoders::google}"}
 	= javascript_include_tag 'lib/jquery', 'editable', 'sounds', 'sound-map'
 
 - content_for :meta do
