--- a/app/views/soundwalks/_soundwalks_map.haml
+++ b/app/views/soundwalks/_soundwalks_map.haml
@@ -1,5 +1,5 @@
 - content_for :javascript do
-	%script{:src => "http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=true_or_false&amp;key=#{Geokit::Geocoders::google}"}
+	%script{:src => "http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=#{Geokit::Geocoders::google}"}
 	= javascript_include_tag 'soundwalks-map'
 	
 %div#soundwalks-map
