--- a/app/views/about/show.haml
+++ b/app/views/about/show.haml
@@ -8,7 +8,7 @@
 %p Soundwalks is a unique community for exploring the world's soundscape. Soundwalks leverages user-submitted field recordings, or "soundwalks," and novel audio processing techniques to let you hear any point on the globe as if you were really there. 
 
 %h1{:style => 'text-align: left'} Social Experiences
-%p Soundwalks takes listening to another level with a complete social network that allows you to share, discuss, and describe recordings. In addition to exploration, you can share your recorded experiences with your friends and the rest of the world with easy-to-use tools. Additionally, you can record your explorations on the web as "virtual soundwalks," composing your own sonic tours for others to experience.
+%p Soundwalks takes listening to another level with a complete social network that allows you to share, discuss, and describe recordings. Our uploading and recording tools make it easy for you to share your recorded experiences with your friends and the rest of the world. Additionally, you can record your explorations on the web as "virtual soundwalks," composing your own sonic tours for others to hear.
 
 %h1{:style => 'text-align: left'} More Information
 %h2{:style => 'text-align: left'} Technology
