--- a/app/views/layouts/site.haml
+++ b/app/views/layouts/site.haml
@@ -51,7 +51,7 @@
 					%p.error= flash[:error]
 				
 				- if !logged_in?
-					%p{:class => 'invitation'} Hey there! Are you new to Soundwalks? We're a unique community dedicated to exploring the world's rich sonic landscape. With Soundwalks, you can share your acoustic experiences and explore new soundscapes with our interactive sound map. <a href="/about">Read more about us</a> and <a href="/signup">join today!</a>
+					%p{:class => 'invitation'} Hey there! Are you new to Soundwalks? We're a new community dedicated to exploring the world's rich sonic landscape. With Soundwalks, you can share your acoustic experiences and explore new soundscapes with our interactive sound map. <a href="/about">Read more about us</a> and <a href="/signup">join today!</a>
 					
 				= yield
 			
